--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: sans-serif;
+    font-family: serif;
     background-image: linear-gradient(-225deg, #a445b2, #d41872 52%, #f06);
     padding: 0 0 5rem;
 }
